infra/k8s/auth-mongo-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: vetta-auth-mongo-srv
spec:
  selector:
    app: vetta-auth-mongo-depl
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
