infra/k8s/auth-srv.yaml
apiVersion: v1
kind: Service

metadata:
  name: vetta-auth-srv
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
