infra/k8s/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vetta-payments-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: sohan0077/vetta-payments
---
apiVersion: v1
kind: Service
metadata:
  name: vetta-payments-srv
spec:
  selector:
    app: payment
  ports:
    - name: paymets
      protocol: TCP
      port: 3000
      targetPort: 3000
